# pykara

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
bridge/: pykara.lua
docs/: bridges.md  directives.md  index.md  tools.md
docs/directives/: char-scope.md  init-scope.md  interpolation.md  line-scope.md  modifiers.md  objects.md  scopes.md  setup-scope.md  syllable-scope.md  types.md  variables.md  word-scope.md
docs/tools/: builtins.md  color.md  coord.md  global.md  layer.md  math.md  random.md  relayer.md  retime.md  shape.md  store.md
pykara/: __init__.py  errors.py
pykara/adapters/: __init__.py
pykara/data/: __init__.py  metadata.py  styles.py
pykara/declaration/: __init__.py  _shared.py  scope.py
pykara/engine/: __init__.py  engine.py  palette.py  safe_builtins.py  variable_context.py
pykara/parsing/: __init__.py  declaration_parser.py  karaoke_parser.py
pykara/processing/: __init__.py  font_metrics.py  font_resolver.py  line_preprocessor.py  (+1 more)
tests/: acceptance_support.py  conftest.py  test_acceptance.py  test_cli.py  test_cli_acceptance_matrix.py  test_data_models.py  test_declaration.py  test_declaration_parser.py  test_document_validation.py  test_engine.py  test_errors.py  test_font_metrics.py  test_font_resolver.py  test_functions.py  test_input_adapter.py  test_karaoke_parser.py  test_line_preprocessor.py  test_output_adapters.py  test_public_docstrings.py  test_specification.py  test_support.py  test_text_renderer.py  test_validation_base.py  test_validation_domain.py  test_variable_context.py
(+134 files in other folders)
